client/stylesheets/sites/site.import.less
.modal.fullscreen {
  .modal-dialog {
    width: 98%;
    height: 90%;

    .modal-content {
      height: 100%;
      border-radius: 0;
    }
  }
}

.transparent {
  .opacity(.85);
}

.borderless {
  border: none;
  border-color: transparent;
}

#search-modal {

  input {
    font-size: 30px;
    .borderless;
  }

  .glyphicon.glyphicon-search {
    font-size: 30px;
  }

  .modal-header {
    border-bottom: none;
  }

  .search-results {
    padding-top: 20px;
  }
}

.search-result {

  width: 300px;

  .search-result-content {
    height: 100px;
    white-space: nowrap;
    overflow-y: hidden;
    text-overflow: ellipsis;
  }
}

.navbar .search-trigger {
  top: 15px;
  font-size: 20px;
  cursor: pointer;
}

